feat: add basic gallery page with grid layout

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                     <i class="bi bi-magic"></i>
                     <span>Transform</span>
                 </a>
-                <a href="#">
+                <a href="gallery.html">
                     <i class="bi bi-collection"></i>
                     <span>Gallery</span>
                 </a>
