feat: improve community page with better post layout

--- a/public/community.html
+++ b/public/community.html
@@ -39,9 +39,14 @@
         </nav>
     </header>
 
-    <div class="container py-5 community-container">
-        <h1 class="text-center mb-4">Community</h1>
-        <!-- Posts will be loaded by JavaScript -->
+    <div class="container py-5">
+        <div class="community-header">
+            <h1>Community</h1>
+            <p class="text-muted">See what others are creating</p>
+        </div>
+        <div class="community-container">
+            <!-- Posts will be loaded by JavaScript -->
+        </div>
     </div>
 
     <script src="community.js"></script>
