--- a/public/gallery.html
+++ b/public/gallery.html
@@ -37,7 +37,7 @@
                     <i class="bi bi-images"></i>
                     <span>My Photos</span>
                 </a>
-                <a href="#">
+                <a href="community.html">
                     <i class="bi bi-people"></i>
                     <span>Community</span>
                 </a>
