--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <header class="glass-header">
@@ -27,7 +27,7 @@
                     <i class="bi bi-magic"></i>
                     <span>Transform</span>
                 </a>
-                <a href="gallery.html">
+                <a href="/static/gallery.html">
                     <i class="bi bi-collection"></i>
                     <span>Gallery</span>
                 </a>
@@ -35,7 +35,7 @@
                     <i class="bi bi-images"></i>
                     <span>My Photos</span>
                 </a>
-                <a href="community.html">
+                <a href="/static/community.html">
                     <i class="bi bi-people"></i>
                     <span>Community</span>
                 </a>
@@ -357,6 +357,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
