--- a/public/gallery.html
+++ b/public/gallery.html
@@ -120,5 +120,7 @@
     
     <!-- Gallery Page JS -->
     <script src="gallery.js"></script>
+    <script src="/static/js/auth.js"></script>
+    <script src="/static/js/script.js"></script>
 </body>
 </html>
