--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <header class="glass-header">
@@ -244,7 +244,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="authModal" tabindex="-1" aria-hidden="true">
+        <!-- <div class="modal fade" id="authModal" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog modal-md">
                 <div class="modal-content glass-card border-0">
                     <div class="modal-header border-0">
@@ -344,7 +344,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         
         <!-- Footer -->
         <footer class="text-center mt-5 pt-5 border-top border-dark">
@@ -357,6 +357,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/script.js"></script>
+    <script src="/static/js/auth.js"></script>
+    <script src="/static/js/script.js"></script>
 </body>
 </html>
