Add logout button and user menu for authenticated state

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,17 @@
                 <!-- <div class="theme-toggle">
                     <i class="bi bi-sun-fill"></i>
                 </div> -->
+
+                <!-- User menu (shown when logged in) -->
+                <div class="user-menu" style="display: none;">
+                    <span id="currentUsername" class="user-name"></span>
+                    <button class="btn-logout">
+                        <i class="bi bi-box-arrow-right"></i>
+                        <span>Logout</span>
+                    </button>
+                </div>
             </div>
+
         </nav>
     </header>
     
