--- a/public/gallery.html
+++ b/public/gallery.html
@@ -49,6 +49,15 @@
                     <i class="bi bi-person-circle"></i>
                     <span>Sign In</span>
                 </button>
+
+                <!-- User menu (shown when logged in) -->
+                <div class="user-menu" style="display: none;">
+                    <span id="currentUsername" class="user-name"></span>
+                    <button class="btn-logout">
+                        <i class="bi bi-box-arrow-right"></i>
+                        <span>Logout</span>
+                    </button>
+                </div>
             </div>
         </nav>
     </header>
