Fix some issues and Aadd user profile page with history, favorites and settings tabs

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -11,9 +11,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Common CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <!-- Gallery Page CSS -->
-    <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="/static/css/gallery.css">
 </head>
 <body>
     <header class="glass-header">
