update user-menu with clickable icon

--- a/public/community.html
+++ b/public/community.html
@@ -38,7 +38,9 @@
 
                 <!-- User menu (shown when logged in) -->
                 <div class="user-menu" style="display: none;">
-                    <span id="currentUsername" class="user-name"></span>
+                    <a href="profile.html" class="user-icon">
+                        <i class="bi bi-person-circle"></i>
+                    </a>
                     <button class="btn-logout">
                         <i class="bi bi-box-arrow-right"></i>
                         <span>Logout</span>
