--- a/public/profile.html
+++ b/public/profile.html
@@ -49,8 +49,9 @@
                 </button>
 
                 <div class="user-menu" style="display: none;">
-                    <i class="bi bi-person-circle"></i>
-                    <span id="currentUsername" class="user-name"></span>
+                    <a href="profile.html" class="user-icon">
+                        <i class="bi bi-person-circle"></i>
+                    </a>
                     <button class="btn-logout">
                         <i class="bi bi-box-arrow-right"></i>
                         <span>Logout</span>
