Fixing errors and improve UI

--- a/public/index.html
+++ b/public/index.html
@@ -53,11 +53,11 @@
 
                 <!-- User menu (shown when logged in) -->
                 <div class="user-menu" style="display: none;">
-                    <a href="profile.html" class="user-icon">
-                        <i class="bi bi-person-circle"></i>
+                    <a href="profile.html" class="user-icon me-3">
+                        <i class="bi bi-person-circle fs-1"></i>
                     </a>
                     <button class="btn-logout">
-                        <i class="bi bi-box-arrow-right"></i>
+                        <i class="bi bi-box-arrow-right me-2"></i>
                         <span>Logout</span>
                     </button>
                 </div>
