--- a/public/gallery.html
+++ b/public/gallery.html
@@ -88,7 +88,7 @@
                 <div class="col-md-6">
                     <div class="d-flex flex-wrap gap-3 justify-content-md-end">
                         <div class="filter-tags">
-                            <button class="filter-btn active">All</button>
+                            <button class="filter-btn active" data-filter="all">All</button>
                             <button class="filter-btn" data-filter="sketch">Sketch</button>
                             <button class="filter-btn" data-filter="anime">Anime</button>
                             <button class="filter-btn" data-filter="ink">Ink Wash</button>
@@ -130,7 +130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Gallery Page JS -->
-    <script src="gallery.js"></script>
+    <script src="/static/js/gallery.js"></script>
     <script src="/static/js/auth.js"></script>
     <script src="/static/js/script.js"></script>
 </body>
