feat(community): Add community hub page with weekly challenges, trending artworks, challenge submissions, and backend API endpoints

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
                     <i class="bi bi-collection"></i>
                     <span>Gallery</span>
                 </a>
-                <a href="/static/profile.html">
-                    <i class="bi bi-person-circle"></i>
-                    <span>Profile</span>
+                <a href="/static/photos.html">
+                    <i class="bi bi-images"></i>
+                    <span>My Photos</span>
                 </a>
                 <a href="/static/community.html">
                     <i class="bi bi-people"></i>
