feat(gallery): Replace views with download button and implement real like functionality

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -33,7 +33,7 @@
                     <i class="bi bi-collection"></i>
                     <span>Gallery</span>
                 </a>
-                <a href="#">
+                <a href="photos.html">
                     <i class="bi bi-images"></i>
                     <span>My Photos</span>
                 </a>
