feat(gallery): Add hover overlay with image details and interactions

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -104,8 +104,8 @@
         </div>
         
         <!-- Gallery Grid -->
-        <div class="row g-4" id="gallery-grid">
-            <!-- Sample images will be loaded here -->
+        <div class="gallery-grid" id="gallery-grid">
+            <!-- Images will be loaded here by JavaScript -->
         </div>
         
         <!-- Loading More -->
