--- a/public/profile.html
+++ b/public/profile.html
@@ -64,20 +64,28 @@
     <div class="bg-animate"></div>
     
     <div class="container py-5">
-        <!-- Profile Header -->
+        <!-- Profile Header with Level Badge -->
         <div class="profile-header glass-card p-4 mb-4">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <div class="d-flex align-items-center gap-4">
-                        <div class="profile-avatar">
+                        <div class="profile-avatar position-relative">
                             <i class="bi bi-person-circle"></i>
+
+                            <div class="level-badge" id="levelBadge">
+                                <span id="userLevel">1</span>
+                            </div>
                         </div>
                         <div>
                             <h2 id="profileName" class="mb-1">Loading...</h2>
                             <p id="profileEmail" class="text-muted mb-2">Loading...</p>
-                            <div class="d-flex gap-3">
+                            <div class="d-flex gap-3 flex-wrap">
                                 <span class="badge bg-success">
                                     <i class="bi bi-check-circle-fill me-1"></i>Active
+                                </span>
+                                <span class="level-title" id="levelTitle">
+                                    <i class="bi bi-star-fill text-warning me-1"></i>
+                                    Level <span id="levelDisplay">1</span>
                                 </span>
                                 <small class="text-muted">
                                     <i class="bi bi-calendar-plus me-1"></i>Joined: <span id="joinDate">Jan 2026</span>
@@ -94,6 +102,26 @@
                         <i class="bi bi-pencil"></i> Edit Profile
                     </button>
                 </div>
+            </div>
+        </div>
+
+        <!-- Level Progress Bar -->
+        <div class="glass-card p-3 mb-4">
+            <div class="d-flex justify-content-between align-items-center mb-2">
+                <span>
+                    <i class="bi bi-star-fill text-warning me-2"></i>
+                    Level <span id="levelValue">1</span>
+                </span>
+                <span class="text-muted small">
+                    <span id="currentExp">0</span>/<span id="nextLevelExp">100</span> XP
+                </span>
+            </div>
+            <div class="progress" style="height: 8px;">
+                <div class="progress-bar bg-warning" id="expProgress" style="width: 0%"></div>
+            </div>
+            <div class="d-flex justify-content-between mt-2 small text-muted">
+                <span><i class="bi bi-trophy me-1"></i>Total Points: <span id="totalPoints">0</span></span>
+                <span><i class="bi bi-arrow-up me-1"></i>Next Level: <span id="nextLevelPoints">100</span></span>
             </div>
         </div>
 
@@ -132,6 +160,44 @@
                     <div class="stat-number" id="shareCount">0</div>
                     <div class="progress mt-3" style="height: 6px;">
                         <div class="progress-bar bg-success" style="width: 0%" id="shareProgress"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Point Activity Summary -->
+        <div class="glass-card p-3 mb-4">
+            <h6 class="mb-3">
+                <i class="bi bi-lightning-charge-fill text-primary me-2"></i>
+                Earn Points
+            </h6>
+            <div class="row g-2">
+                <div class="col-6 col-md-3">
+                    <div class="point-rule text-center p-2">
+                        <i class="bi bi-images text-info"></i>
+                        <small class="d-block">Upload</small>
+                        <span class="badge bg-success">+5</span>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="point-rule text-center p-2">
+                        <i class="bi bi-share text-primary"></i>
+                        <small class="d-block">Publish</small>
+                        <span class="badge bg-success">+10</span>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="point-rule text-center p-2">
+                        <i class="bi bi-trophy text-warning"></i>
+                        <small class="d-block">Challenge</small>
+                        <span class="badge bg-success">+30</span>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="point-rule text-center p-2">
+                        <i class="bi bi-heart-fill text-danger"></i>
+                        <small class="d-block">Get Like</small>
+                        <span class="badge bg-success">+1</span>
                     </div>
                 </div>
             </div>
@@ -181,16 +247,6 @@
                 </div>
             </div>
 
-            <!-- Activity Tab -->
-            <div class="tab-pane fade" id="activity">
-                <div class="activity-timeline p-4" id="activityContainer">
-                    <div class="text-center py-5 text-muted">
-                        <i class="bi bi-activity display-4 mb-3"></i>
-                        <p>No recent activity</p>
-                    </div>
-                </div>
-            </div>
-
             <!-- Settings Tab -->
             <div class="tab-pane fade" id="settings">
                 <div class="row">
@@ -229,7 +285,7 @@
                                 <input class="form-check-input" type="checkbox" id="newsletter" checked>
                                 <label class="form-check-label" for="newsletter">Newsletter</label>
                             </div>
-                            <button class="btn btn-outline-danger w-100">
+                            <button class="btn btn-outline-danger w-100" id="logoutBtn">
                                 <i class="bi bi-box-arrow-right me-2"></i>Logout
                             </button>
                         </div>
