feat(profile): Add avatar upload and fix profile update functionality

--- a/public/profile.html
+++ b/public/profile.html
@@ -318,7 +318,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Avatar</label>
-                            <input type="file" class="form-control" accept="image/*">
+                            <input type="file" class="form-control" id="editAvatar" accept="image/*">
                             <small class="text-muted">Upload a profile picture (optional)</small>
                         </div>
                         <div class="d-grid">
