--- a/public/community.html
+++ b/public/community.html
@@ -305,8 +305,9 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/community.js"></script>
     <script src="/static/js/auth.js"></script>
+    <script src="/static/js/gallery.js"></script>
+    <script src="/static/js/community.js"></script>
     <script src="/static/js/script.js"></script>
 </body>
 </html>
